# tagparser

./: .gitignore  CMakeLists.txt  README.md  abstractattachment.cpp  abstractattachment.h  abstractchapter.cpp  abstractchapter.h  abstractcontainer.cpp  abstractcontainer.h  abstracttrack.cpp  abstracttrack.h  aspectratio.cpp  aspectratio.h  backuphelper.cpp  backuphelper.h  basicfileinfo.cpp  basicfileinfo.h  caseinsensitivecomparer.h  diagnostics.cpp  diagnostics.h  download_testfiles.sh  exceptions.cpp  exceptions.h  fieldbasedtag.h  genericcontainer.h  genericfileelement.h  generictagfield.h  global.h  language.cpp  language.h  localeawarestring.cpp  localeawarestring.h  localehelper.cpp  localehelper.h  margin.h  mediafileinfo.cpp  mediafileinfo.h  mediaformat.cpp  mediaformat.h  nestingsupportingtag.h  (+21 more)
aac/: aaccodebook.cpp  aaccodebook.h  aacframe.cpp  aacframe.h
adts/: adtsframe.cpp  adtsframe.h  adtsstream.cpp  adtsstream.h
av1/: av1configuration.cpp  av1configuration.h
avc/: avcconfiguration.cpp  avcconfiguration.h  avcinfo.cpp  avcinfo.h
avi/: bitmapinfoheader.cpp  bitmapinfoheader.h  mediafourcc.cpp  mediafourcc.h
cmake/scripts/: generate_iso_language_codes.cmake
debug/: seekinformation.txt
doc/: adding-new-fields.md  example.cpp
flac/: flacmetadata.cpp  flacmetadata.h  flacstream.cpp  flacstream.h  flactooggmappingheader.cpp  flactooggmappingheader.h
id3/: id3genres.cpp  id3genres.h  id3v1tag.cpp  id3v1tag.h  id3v2frame.cpp  id3v2frame.h  id3v2frameids.cpp  id3v2frameids.h  id3v2tag.cpp  id3v2tag.h
ivf/: ivfframe.cpp  ivfframe.h  ivfstream.cpp  ivfstream.h
matroska/: ebmlelement.cpp  ebmlelement.h  ebmlid.h  matroskaattachment.cpp  matroskaattachment.h  matroskachapter.cpp  matroskachapter.h  matroskacodecid.cpp  matroskacodecid.h  matroskacontainer.cpp  matroskacontainer.h  matroskacues.cpp  matroskacues.h  matroskaeditionentry.cpp  matroskaeditionentry.h  matroskaid.cpp  matroskaid.h  matroskaseekinfo.cpp  matroskaseekinfo.h  matroskatag.cpp  matroskatag.h  matroskatagfield.cpp  matroskatagfield.h  matroskatagid.cpp  matroskatagid.h  matroskatrack.cpp  matroskatrack.h
mp4/: mp4atom.cpp  mp4atom.h  mp4container.cpp  mp4container.h  mp4ids.cpp  mp4ids.h  mp4tag.cpp  mp4tag.h  mp4tagatomnames.cpp.autosave  mp4tagfield.cpp  mp4tagfield.h  mp4track.cpp  mp4track.h  mpeg4descriptor.cpp  mpeg4descriptor.h
mpegaudio/: mpegaudioframe.cpp  mpegaudioframe.h  mpegaudioframestream.cpp  mpegaudioframestream.h
ogg/: oggcontainer.cpp  oggcontainer.h  oggiterator.cpp  oggiterator.h  oggpage.cpp  oggpage.h  oggstream.cpp  oggstream.h
opus/: opusidentificationheader.cpp  opusidentificationheader.h
pkgbuild/default/: PKGBUILD
pkgbuild/mingw-w64/: PKGBUILD
scripts/: download_testfiles.sh  download_various_files.sh  list_required_testfiles.sh  update-enum-comments.pl
testfiles/: metadata_for_ffmpeg.txt
testfiles/mkv/: nested-tags.xml
tests/: helper.cpp  helper.h  matroska.cpp  mediafileinfo.cpp  overall.cpp  overall.h  overallflac.cpp  overallgeneral.cpp  overallmkv.cpp  overallmp3.cpp  overallmp4.cpp  overallogg.cpp  tagvalue.cpp  testfilecheck.cpp  utils.cpp
vorbis/: vorbiscomment.cpp  vorbiscomment.h  vorbiscommentfield.cpp  vorbiscommentfield.h  vorbiscommentids.cpp  vorbiscommentids.h  vorbisidentificationheader.cpp  vorbisidentificationheader.h  vorbispackagetypes.h
wav/: waveaudiostream.cpp  waveaudiostream.h
